upload new task

--- a/coffee/index.html
+++ b/coffee/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
-        <div class="top-portion"> FREE shipping <img src="/images/tracking.png" alt=""></div>
+        <div class="top-portion"> FREE shipping <img src="/images/tracking.png" alt="image not found"></div>
         <div class="logo"><img src="/images/logo.png" alt="/image not found"></div>
         <div class="header">
             <h4>The best local coffee <br>brought to you</h4>
@@ -19,7 +19,7 @@
             <button>Buy Now</button>
         </div>
         <div class="header-image">
-            <img src="/images/coffe.png" alt="">
+            <img src="/images/coffe.png" alt="image not found">
         </div>
     </header>
 
@@ -29,7 +29,7 @@
         <h4> who we are</h4>
         <p>mai shari coffee is a speciality coffee house that caters to the corporate <br> individual and aficionado.
         </p>
-        <img src="/images/WhatsApp Image 2025-08-18 at 09.06.57_3360a45c.jpg" alt="">
+        <img src="/images/WhatsApp Image 2025-08-18 at 09.06.57_3360a45c.jpg" alt="image not found">
         <div class="about-content">
             <h3>mai shahi coffee <br> house blended beans</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. nisi,fugiat illum ,tempora ,labore officiis
@@ -76,7 +76,7 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non tempore dolorum et iure reprehenderit similique magnam expedita repellendus accusamus, culpa placeat quo facere. Possimus nihil sint asperiores modi libero commodi?</p>
           </div>
           <div class="product-image">
-            <img src="/images/WhatsApp Image 2025-08-18 at 09.06.55_a4124621.jpg" alt="">
+            <img src="/images/WhatsApp Image 2025-08-18 at 09.06.55_a4124621.jpg" alt="iamge not found">
           </div>
     </section>
 </body>
